# ncaa-predictions

./: README.md  pyproject.toml
mbp/: classes.py  constants.py  data.py  paths.py  utils.py  webscraping.py
mbp/models/: Player.py  TeamGame.py  TeamYear.py  __init__.py
notebooks/: 01_update_local_data.ipynb  02_read_raw_data.ipynb  03_get_game_details.ipynb  03_get_season_matchups.ipynb  04_get_season_matchups.ipynb
scripts/: webdriver.py
