[tool.poetry]
name = "mbp"
version = "0.1.0"
description = ""
authors = ["Ari <me@ari.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"
scrapingant-client = "^2.0.1"
selenium = "^4.14.0"
bs4 = "^0.0.1"
webdriver-manager = "^4.0.1"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
